<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >


    <RelativeLayout
        android:id="@+id/rl_backIamge"
        android:layout_width="@dimen/item_offset_30dp"
        android:layout_height="@dimen/item_offset_30dp"
        android:layout_marginTop="@dimen/item_offset_10dp"
        android:layout_marginRight="@dimen/item_offset_10dp"
        android:layout_gravity="right">
        <ImageView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/editim" />

    </RelativeLayout>



    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/item_offset_10dp"
        android:text="@string/userregister"
        android:textColor="@color/black"
        android:textSize="@dimen/item_offset_17sp" />


    <RelativeLayout
        android:id="@+id/ll_phone"
        android:layout_marginTop="@dimen/item_offset_30dp"
        android:layout_marginLeft="@dimen/item_offset_40dp"
        android:layout_marginRight="@dimen/item_offset_40dp"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:background="@drawable/shape_btn_white_black">



        <LinearLayout
            android:id="@+id/ll_bianhao"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_offset_10dp"
            android:layout_width="@dimen/item_offset_40dp"
            android:gravity="center"
            android:layout_height="@dimen/item_offset_20dp">


            <TextView
                android:id="@+id/tv_bianbao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/bianhao"/>

        </LinearLayout>


        <View
            android:id="@+id/line"
            android:layout_toRightOf="@+id/ll_bianhao"
            android:layout_width="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_offset_6dp"
            android:layout_height="@dimen/item_offset_30dp"
            android:background="@color/color_E7E7E7"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="9dp"
            android:layout_toRightOf="@+id/line"
            android:background="@null"
            android:hint="手机号"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingLeft="@dimen/item_offset_10dp"
            android:textColor="@color/color_1A1B1F"
            android:textColorHint="@color/color_A6A6A6"
            android:textSize="14sp" />

        <View
            android:layout_toLeftOf="@+id/mCode"
            android:layout_width="1dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/item_offset_10dp"
            android:layout_height="@dimen/item_offset_30dp"
            android:background="@color/color_E7E7E7"/>


        <TextView
            android:id="@+id/mCode"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/item_offset_10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="@dimen/item_offset_14sp"
            android:textColor="@color/color_1A1B1F"
            android:text="@string/fasong"/>


    </RelativeLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_offset_40dp"
        android:layout_marginRight="@dimen/item_offset_40dp"
        android:layout_marginTop="@dimen/item_offset_20dp"
        android:background="@drawable/shape_btn_white_black">


        <EditText
            android:id="@+id/et_code"
            android:paddingLeft="@dimen/item_offset_10dp"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:hint="请输入验证码"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/color_1A1B1F"
            android:textColorHint="@color/color_A6A6A6"
            android:textSize="14sp" />


        <!--<TextView-->
        <!--android:id="@+id/tv_backpass"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginRight="@dimen/item_offset_13dp"-->
        <!--android:text="@string/back_pass"-->
        <!--android:textColor="@color/color_1A1B1F"-->
        <!--android:textSize="@dimen/item_offset_14sp" />-->

        <!--<View-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_height="@dimen/item_offset_26dp"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginRight="@dimen/item_offset_13dp"-->
        <!--android:layout_toLeftOf="@+id/tv_backpass"-->
        <!--android:background="@color/color_E7E7E7" />-->


    </RelativeLayout>




    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/item_offset_40dp"-->
        <!--android:layout_marginRight="@dimen/item_offset_40dp"-->
        <!--android:layout_marginTop="@dimen/item_offset_20dp"-->
        <!--android:background="@drawable/shape_btn_white_black">-->


        <!--<EditText-->
            <!--android:id="@+id/et_id"-->
            <!--android:layout_marginLeft="@dimen/item_offset_10dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="36dp"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:background="@null"-->
            <!--android:hint="@string/people_id"-->
            <!--android:inputType="number"-->
            <!--android:maxLines="1"-->
            <!--android:textColor="@color/color_1A1B1F"-->
            <!--android:textColorHint="@color/color_A6A6A6"-->
            <!--android:textSize="14sp" />-->

        <!--<TextView-->
            <!--android:layout_marginRight="@dimen/item_offset_10dp"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:textColor="@color/color_1A1B1F"-->
            <!--android:textSize="14sp"-->
            <!--android:text="@string/xuantian"/>-->


    <!--</RelativeLayout>-->


    <LinearLayout
        android:id="@+id/ll_login"

        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="@dimen/item_offset_40dp"
        android:layout_marginRight="@dimen/item_offset_40dp"
        android:layout_marginTop="@dimen/item_offset_42dp"
        android:background="@drawable/shape_btn_yellow"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/text_body_14sp" />

    </LinearLayout>


    <!--<LinearLayout-->
        <!--android:id="@+id/ll_login_black"-->
        <!--android:layout_width="match_parent"-->
        <!--android:visibility="visible"-->
        <!--android:layout_height="36dp"-->
        <!--android:layout_marginLeft="@dimen/item_offset_40dp"-->
        <!--android:layout_marginRight="@dimen/item_offset_40dp"-->
        <!--android:layout_marginTop="@dimen/item_offset_42dp"-->
        <!--android:background="@drawable/shape_btn_dark"-->
        <!--android:gravity="center">-->


        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/next"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="@dimen/text_body_14sp" />-->

    <!--</LinearLayout>-->


    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginTop="@dimen/item_offset_10dp"-->
        <!--android:gravity="center"-->
        <!--android:orientation="horizontal">-->

        <!--<CheckBox-->
            <!--android:id="@+id/check"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:checked="false" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/yuedu"-->
            <!--android:textColor="@color/black"-->
            <!--android:textSize="12sp" />-->

        <!--<TextView-->
            <!--android:id="@+id/user_agreement"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/yonghu"-->
            <!--android:textColor="@color/color_007AFF"-->
            <!--android:textSize="12sp" />-->
    <!--</LinearLayout>-->


    <TextView
        android:id="@+id/tv_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/item_offset_17dp"
        android:text="@string/user_login"
        android:textColor="@color/color_007AFF"
        android:textStyle="bold" />






</LinearLayout>