<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/rl_backIamge"
        android:layout_width="@dimen/item_offset_30dp"
        android:layout_height="@dimen/item_offset_30dp"
        android:layout_marginTop="@dimen/item_offset_10dp"
        android:layout_marginRight="@dimen/item_offset_10dp"
        android:layout_gravity="right">
        <ImageView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
         />

    </RelativeLayout>



    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/item_offset_8dp"
        android:text="@string/userlogin"
        android:textColor="@color/black"
        android:textSize="@dimen/item_offset_17sp" />





    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/item_offset_40dp"
        android:layout_marginRight="@dimen/item_offset_40dp"
        android:layout_marginTop="@dimen/item_offset_30dp"
        android:paddingLeft="@dimen/item_offset_10dp"
        android:background="@drawable/shape_btn_white_black"
        android:hint="请填写您的手机号"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1"
        android:textColor="@color/color_1A1B1F"
        android:textColorHint="@color/color_A6A6A6"
        android:textSize="14sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_offset_40dp"
        android:layout_marginRight="@dimen/item_offset_40dp"
        android:layout_marginTop="@dimen/item_offset_20dp"
        android:background="@drawable/shape_btn_white_black">


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/item_offset_10dp"
            android:layout_toLeftOf="@+id/lr_backpass"
            android:background="@null"
            android:hint="请输入您的密码"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/color_1A1B1F"
            android:textColorHint="@color/color_A6A6A6"
            android:textSize="14sp" />



        <!--<RelativeLayout-->
            <!--android:id="@+id/lr_backpass"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="36dp"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginRight="@dimen/item_offset_13dp">-->
            <!--<TextView-->
                <!--android:id="@+id/tv_backpass"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerInParent="true"-->
                <!--android:text="@string/back_pass"-->
                <!--android:textColor="@color/color_1A1B1F"-->
                <!--android:textSize="@dimen/item_offset_14sp" />-->
        <!--</RelativeLayout>-->


        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/item_offset_26dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/item_offset_13dp"
            android:layout_toLeftOf="@+id/lr_backpass"
            android:background="@color/color_E7E7E7" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="@dimen/item_offset_40dp"
        android:layout_marginRight="@dimen/item_offset_40dp"
        android:layout_marginTop="@dimen/item_offset_42dp"
        android:background="@drawable/shape_btn_yellow"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_habei"
            android:textColor="@color/white"
            android:textSize="@dimen/text_body_14sp" />

    </LinearLayout>


    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginTop="@dimen/item_offset_10dp"-->
        <!--android:orientation="horizontal">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/dianji"-->
            <!--android:textColor="@color/black"-->
            <!--android:textSize="12sp" />-->

        <!--<TextView-->
            <!--android:id="@+id/user_agreement"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/yonghu"-->
            <!--android:textColor="@color/color_007AFF"-->
            <!--android:textSize="12sp" />-->
    <!--</LinearLayout>-->


    <TextView
        android:id="@+id/tv_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/item_offset_17dp"
        android:text="@string/eaion"
        android:textColor="@color/color_007AFF"
        android:textStyle="bold" />


</LinearLayout>